# mycompany-consent-demo

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
backend/: README.md  main.py  pyproject.toml  settings.py  tasks.py
backend/app/: api.py  auth.py  db.py  errors.py  lifeengine.py  log.py  models.py  utils.py
backend/app/routers/: auth.py  configuration.py  consents.py  health.py  identities.py  product_gateway.py
docker/: build-prepare.sh  build-setup.sh  nginx-entrypoint.sh  runtime-entrypoint.sh  runtime-prepare.sh
frontend/accountant/: .env  .env.production  README.md  package.json  pnpm-lock.yaml
frontend/accountant/public/: index.html  manifest.json
frontend/accountant/src/: App.js
frontend/accountant/src/components/: Button.js  CompanyCardHorizontal.js  Container.js  DataProduct.js  Heading.js  IdentityCard.js  LabelValue.js  LayoutColumn.js  LayoutRow.js  Link.js  LoadingIndicator.js  Modal.js  OwnershipDataTable.js  PageHeader.js  ProtectedRoute.js  Select.js  ShareModal.js  Text.js  UserProfile.js  VerticalMenu.js  index.js
frontend/accountant/src/containers/: CompanyRouter.js  CompanySelect.js  CompanyView.js  Error.js  InitialLoading.js  Login.js
frontend/accountant/src/theme/: colors.js  index.js  transitions.js  typography.js  variants.js
frontend/accountant/src/utilities/: api.js  index.js
frontend/my-company/: .env  .env.production  README.md  package.json  pnpm-lock.yaml
frontend/my-company/public/: index.html
frontend/my-company/src/: App.js  index.js  setupProxy.js
frontend/my-company/src/components/: Button.js  CompanyBasicInfo.js  CompanyCardHorizontal.js  Container.js  DataProduct.js  Heading.js  LabelValue.js  LayoutColumn.js  LayoutRow.js  Link.js  OwnershipDataTable.js  PageHeader.js  PersonIdentityCard.js  Select.js  ShareModal.js  Text.js  VerticalMenu.js  index.js
frontend/my-company/src/containers/: BoardView.js  CompanyRouter.js  CompanySearchView.js  CompanySelect.js  CompanyView.js  InitialLoading.js  OwnershipView.js
frontend/my-company/src/theme/: colors.js  index.js  transitions.js  typography.js  variants.js
frontend/my-company/src/utilities/: api.js  consentTokenManager.js  index.js
nginx/: global-security-headers.conf  nginx.conf
nginx/conf.d/: default.conf
