[tool.poetry]
name = "my-company-consent-demo-app"
version = "1.0.0"
description = "MyCompany consent demo app backend"
authors = ["Digital Living International Ltd"]
license = "BSD-3-Clause"
packages = [{include = "app", from="."}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"
uvicorn = "^0.18.2"
aiofiles = "^0.8.0"
invoke = "^1.7.1"
httpx = "^0.23.0"
mock = "^4.0.3"
python-multipart = "^0.0.5"
pydantic = {version = "^1.9.2", extras = ["dotenv"]}
cryptography = "^37.0.4"
firedantic = "^0.3.0"
loguru = "^0.6.0"
stringcase = "^1.2.0"
pyjwt-key-fetcher = "^0.2.0"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
bandit = "^1.7.4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
